# PowerAppsAutomate

./: .gitignore  PowerApps组件分类提取列表.md  main.py  pyproject.toml  result.txt
.cache/powerapps/: dom_targets.json  experience.json  experience.json.bak
.trae/: rules.md  核心目录结构.md
PowerfulApps/: main.py
PowerfulApps/Agents/: __init__.py  memory.py  powerapps_mvp_agent.py  project_commands.py  prompts.py  runtime.py  short_memory.py  tools.py
PowerfulApps/Browser/: __init__.py
PowerfulApps/DOM/: enhanced_snapshot.py  service.py  views.py
PowerfulApps/MocProcess/: __init__.py
RAG/: llm_client.py  prompts.py  rag_config.py  rag_indexer.py  rag_meta.db  rag_retriever.py  schema.py
RAG/InsertElement/: 00-索引.md  01-布局.md  02-输入.md  03-显示.md  04-媒体.md  05-图表与形状.md  06-人工智能与混合现实.md  07-经典.md
Test/: locate_and_cache_targets.py  locate_formula_bar.py  probe_property_dropdown.py  probe_search_box.py  run_experience_agent.py  run_powerfulapps_chain.py  test_langgraph_memory.py  test_search_and_select_tree_item.py  test_search_in_tree.py  test_tree_scan.py  test_visual_formula_click.py  test_watchdog_monitor.py
Test/probe_results/: experience_deep_traverse.json  experience_full_explore.json  experience_traverse.json  insert_menu_view_items.json  probe_v2_report.txt  probe_v2_results.json  tree_scan_result.json
agent/: __init__.py
agent/browser_use/: README.md
datebase/RAG/: rag_meta.db
mocProcessing/: __init__.py  logging_config.py  observability.py  utils.py
mocProcessing/actor/: element.py  mouse.py  page.py
mocProcessing/agent/: judge.py  prompts.py  (+3 more)
(+156 files in other folders)
