[project]
name = "powerappsautomate"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # browser-use 使用本地 fork（agent/browser_use/），不再通过 pip 安装
    "chromadb>=0.5.0",
    "langchain-anthropic>=1.3.1",
    "langchain-openai>=1.1.9",
    "openai>=1.55.0",
    "playwright>=1.60.0",
    "sentence-transformers>=3.0.0",
    "volcengine-python-sdk[ark]>=5.0.33",
]
